# Supermarket-TestDesign-Kata

./: README.md
cpp/: CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  ShoppingCart.cpp  ShoppingCart.h  Teller.cpp  Teller.h
cpp/test-googletest/: CMakeLists.txt  SuperMarketTest.cpp
csharp/: Supermarket.sln
csharp/Supermarket/: Supermarket.csproj
csharp/Supermarket.Test/: Supermarket.Test.csproj  UnitTest1.cs
csharp/SupermarketTests/: SupermarketNUnitTest.cs  SupermarketTests.csproj  SupermarketXUnitTest.cs
java/: pom.xml
java/src/test/java/dojo/supermarket/model/: SupermarketTest.java
python/: requirements.txt
python/src/supermarket/: catalog.py  teller.py
python/tests/: test_supermarket.py
typescript/: license.txt  package-lock.json  package.json
typescript/src/: ReceiptPrinter.ts
typescript/test/: FakeCatalog.ts  Supermarket.test.ts
